# water

./: CMakeLists.txt  json格式示例.txt  partitions.csv  小程序侧BLE配网通道实现要求.md  水泵电流检测及优化.md  蓝牙配网与配置通道说明.md
.devcontainer/: devcontainer.json
components/app_events/: CMakeLists.txt
components/app_events/include/: app_events.h
components/app_events/src/: app_events.c
components/app_fsm/: CMakeLists.txt
components/app_fsm/include/: app_fsm.h
components/app_fsm/src/: app_fsm.c
components/app_storage/: CMakeLists.txt
components/app_storage/include/: app_storage.h
components/app_storage/src/: app_storage.c
components/blufi_custom/: CMakeLists.txt  idf_component.yml
components/blufi_custom/include/: blufi_custom.h
components/blufi_custom/src/: blufi_custom.c  blufi_custom_priv.h  blufi_security.c
components/bsp_driver/: CMakeLists.txt
components/bsp_driver/include/: bsp_led.h  bsp_pump_valve.h  bsp_sensor.h
components/bsp_driver/src/: bsp_led.c  bsp_pump_valve.c  bsp_sensor.c
components/custom_ble/: CMakeLists.txt
components/custom_ble/include/: custom_ble.h
components/custom_ble/src/: custom_ble.c
components/modem_4g/: CMakeLists.txt
components/modem_4g/include/: modem_4g.h
components/modem_4g/src/: modem_4g.c
components/mqtt_manager/: CMakeLists.txt
components/mqtt_manager/include/: mqtt_manager.h
components/mqtt_manager/src/: mqtt_manager.c
components/net_manager/: CMakeLists.txt
components/net_manager/include/: net_manager.h
components/protocol/: CMakeLists.txt
components/time_manager/: CMakeLists.txt
main/: CMakeLists.txt  app_logic.c  app_logic.h  idf_component.yml  main.c  mqtt_manager.c  net_manager.c  net_manager.h  protocol.c  protocol.h  time_manager.h
(+4 files in other folders)
